feat: add JUnit Jupiter dependency and replace System.out with SLF4J logging in various classes